--- a/src/ResultReporting/ResultReporting.form
+++ b/src/ResultReporting/ResultReporting.form
@@ -38,9 +38,9 @@
           <text value="Finish"/>
         </properties>
       </component>
-      <component id="28b31" class="javax.swing.JList" binding="resultList">
+      <component id="53e85" class="javax.swing.JTextArea" binding="resultList">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="50"/>
           </grid>
         </constraints>
