Change some comments

--- a/src/AdminSetup/AdminSetupForm.form
+++ b/src/AdminSetup/AdminSetupForm.form
@@ -82,6 +82,7 @@
         </constraints>
         <properties>
           <enabled value="true"/>
+          <foreground color="-65536"/>
           <text value="User already took a test. You can’t change items."/>
         </properties>
       </component>
