Finish should close that entry screen only. not close all screens

--- a/src/AdminSetup/AdminSetupForm.form
+++ b/src/AdminSetup/AdminSetupForm.form
@@ -84,6 +84,7 @@
           <enabled value="true"/>
           <foreground color="-65536"/>
           <text value="User already took a test. You can’t change items."/>
+          <visible value="false"/>
         </properties>
       </component>
       <hspacer id="3b819">
